# secmodel

./: .envrc  Cargo.toml  README.md  flake.nix  test-diagram.sh  test-report.sh
example/webapp/: report.md  security_model.toml
secmodel/: Cargo.toml
secmodel/src/: main.rs
secmodel_core/: Cargo.toml
secmodel_core/src/: lib.rs
secmodel_md/: Cargo.toml
secmodel_md/src/: lib.rs
secmodel_mermaid/: Cargo.toml  README.md
secmodel_mermaid/src/: lib.rs
secmodel_mermaid/templates/default/: actor.m  agent.m  application.m  endpoint.m  flow.m  model.m  network.m  server.m  store.m
test/: test_model.toml
