[package]
name = "secmodel_md"
version = "0.1.0"
edition = "2021"

[dependencies]
secmodel_core = { path = "../secmodel_core" }
secmodel_mermaid = { path = "../secmodel_mermaid" }

indexmap = { version = "2.6.0", features = ["serde"] }
markdown = "1.0.0-alpha.20"
serde = { version = "1.0.210", features = ["derive"] }
tera = "1"
toml = "0.8.19"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
#time = { version = "0.3.36", features = ["parsing", "macros"] }
serde_json = { version = "1" }
uuid = { version = "1", features = ["serde", "v4"] }
anyhow = "1.0.89"
thiserror = "1.0.64"
log = "0.4.22"

