[package]
name = "secmodel_mermaid"
version = "0.1.0"
edition = "2021"

[dependencies]
secmodel_core = {path = "../secmodel_core"}
tera = "1"
lazy_static = "1.5.0"
anyhow = "1.0.89"
thiserror = "1.0.64"
log = "0.4.22"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = { version = "1" }